# fastapi-base-project

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/endpoints/: initial.py
app/core/: config.py
app/db/: database.py
